# ceia-deep-learning

./: .gitignore  Introduction_to_PyTorch.ipynb  TP2.ipynb  Untitled.ipynb  Untitled1.ipynb  classify_images.py  constant-width-gs-01  constant-width-gs-02  download_weights.sh  emb-gs-02  emb-gs-03  gs-01.pkl  gs-02.pkl  incr-width-gs-01  incr-width-gs-02  models.py  pyproject.toml  upload_to_gdrive.py  xgb-emb-01  zipfiles.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
