[project]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "leo centurion",email = "centurionm.leo@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "cupy (>=13.4.1,<14.0.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
